--- a/index.html
+++ b/index.html
@@ -5,29 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy Birthday, Baby!</title>
+  <title>Ashley Hoang</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-  
-  <h1 class="title col-md-12 jumbotron text-center">Happy Birthday, My Dear Husband! <hr></h1>
-  <h3 class="col-md-12">
 
-  </h3>
-  <h3 class = "col-md-12">When we first met, I never thought we would last this long, but guess what, we did! 
-    Sure we have our differences, but that is what makes our relationship so interesting. 
-  </h3>
-  <h3 class ="col-md-12">
-
-  </h3>
-  <h3 class = "col-md-12">
-<br> 
-    </h3>
-    <hr>
-    <h3 class="col-md-12 text-center">Love</h3>
-    <h3 class="col-md-12 text-center">Your Wife</h3>
 
 
 </body>
