--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ p {line-height: 2}
   <h1>Duyen's Baby Shower</h1>
   <br>
   <br>
-  <img src="/Users/duyennguyen/Desktop/Ashley Hoang/Covid19Measures.png" alt="Covid-19 Measures">
+  <img src="Covid19Measures.png" alt="Covid-19 Measures">
   <br>
   <br>
   <br>
