--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@ h3{font-family: "Jazz LET", fantasy}
 h4,h6,a{font-family: "Apple Chancery", cursive}
 body, html {height: 100%}
 p {line-height: 2}
-.bgimg, .bgimg2 {
+.bgimg{
+  min-height: 70%;
+  background-position: center;
+  background-size: cover;
+}
+.bgimg2 {
   min-height: 50%;
   background-position: center;
   background-size: cover;
