--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@ h4,h6,a{font-family: "Apple Chancery", cursive}
 body, html {height: 100%}
 p {line-height: 2}
 .bgimg{
-  max-width: 100%;
-  height: auto;
+  min-height: 100%;
   background-position: center;
   background-size: cover;
 }
