--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ p {line-height: 2}
   <h1>Duyen's Baby Shower</h1>
   <br>
   <br>
-  <img src="Covid19Measures.png" alt="Covid-19 Measures" style="width:75%; display: block; margin-left: auto; margin-right: auto;">
+  <img src="Covid19Measures.png" alt="Covid-19 Measures" style="width:auto; max-width: 100%; height: auto;">
   <br>
   <br>
   <br>
