--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@ h4,h6,a{font-family: "Apple Chancery", cursive}
 body, html {height: 100%}
 p {line-height: 2}
 .bgimg{
-  min-height: 10%;
+  width:auto; 
+  max-width: 100%; 
+  height: auto;
   background-position: center;
   background-size: cover;
 }
