--- a/index.html
+++ b/index.html
@@ -18,11 +18,8 @@ h4,h6,a{font-family: "Apple Chancery", cursive}
 body, html {height: 100%}
 p {line-height: 2}
 .bgimg{
-  width:auto; 
-  max-width: 100%; 
-  height: auto;
   background-position: center;
-  background-size: cover;
+  background-size: auto;
 }
 .bgimg2 {
   min-height: 50%;
