--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ p {line-height: 2}
 .bgimg{
   background-position: center;
   background-size: auto;
+  background-repeat: no-repeat;
 }
 .bgimg2 {
   min-height: 50%;
