--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ h4,h6,a{font-family: "Apple Chancery", cursive}
 body, html {height: 100%}
 p {line-height: 2}
 .bgimg{
+  background-size: 100% 100%;
   background-position: center;
-  background-size: auto;
-  background-repeat: no-repeat;
+  background-size: cover;
 }
 .bgimg2 {
   min-height: 50%;
