--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@ p {line-height: 2}
     
   </div>
 </header>
+  
+<div class="w3-display-container bgimg">
+  <div class="w3-display-middle w3-text-white w3-center">
+    <h2>Please join us for a</h2>
+    <h1 class="w3-jumbo">BABY SHOWER</h1>
+    <h2><b>Honoring</b></h2>
+    <br>
+    <h3><b>DUYEN NGUYEN</b></h3>
+    <br>
+    <h3><b>06.27.2021</b></h2>
+  </div>
+</div>
 
 <!-- About / Ashley Hoang -->
 <div class="w3-container w3-padding-64 w3-pale-red w3-grayscale-min" id="us">
