--- a/index.html
+++ b/index.html
@@ -48,22 +48,8 @@ p {line-height: 2}
   </div>
 </div>
   
-
-<!-- Header / Home-->
-<header class="w3-display-container w3-wide bgimg w3-grayscale-min" id="home">
-  <div class="w3-display-middle w3-text-white w3-center">
-    <h2>Please join us for a</h2>
-    <h1 class="w3-jumbo">BABY SHOWER</h1>
-    <h2><b>Honoring</b></h2>
-    <br>
-    <h3><b>DUYEN NGUYEN</b></h3>
-    <br>
-    <h3><b>06.27.2021</b></h2>
-    
-  </div>
-</header>
   
-<div class="w3-display-container bgimg">
+<div class="w3-display-container w3-wide bgimg" id="home">
   <div class="w3-display-middle w3-text-white w3-center">
     <h2>Please join us for a</h2>
     <h1 class="w3-jumbo">BABY SHOWER</h1>
