--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ p {line-height: 2}
 </div>
   
   
-<div class="w3-display-container w3-wide bgimg" id="home">
+<div class="w3-display-container w3-wide bgimg w3-grayscale-min" id="home">
   <div class="w3-display-middle w3-text-white w3-center">
     <h2>Please join us for a</h2>
     <h1 class="w3-jumbo">BABY SHOWER</h1>
